default links to no underline, fix position of utility nav, break out common mobile/desktop padding to mixin

--- a/web/app/themes/ilsfa/assets/styles/components/_base.scss
+++ b/web/app/themes/ilsfa/assets/styles/components/_base.scss
@@ -37,6 +37,7 @@ h4 {
 
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
