--- a/web/app/themes/ilsfa/assets/styles/helpers/_mixins.scss
+++ b/web/app/themes/ilsfa/assets/styles/helpers/_mixins.scss
@@ -52,24 +52,6 @@
   @include smooth;
 }
 
-// Inset shadows for images
-@mixin inset-shadow {
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-}
-.inset-shadow,
-%inset-shadow {
-  @include inset-shadow;
-}
-
-
 // Responsive mixins by Andy Richardson (@andimal): https://github.com/andimal/sass-responsive-mixin-madness
 @mixin media-xs() {
   @media screen and (max-width: $breakpoint-small - 1) {
