--- a/web/app/themes/ilsfa/assets/styles/helpers/_utility.scss
+++ b/web/app/themes/ilsfa/assets/styles/helpers/_utility.scss
@@ -1,3 +1,13 @@
+// Common padding
+@mixin global-padding {
+  padding: $mobile-global-padding;
+
+  // Desktop styles
+  @include media-md {
+    padding: grid(12) columns(2);
+  }
+}
+
 // Browser alert
 .old-browser {
   top: 0;
@@ -46,4 +56,21 @@
   @include media-md {
     display: none !important;
   }
+}
+
+// Inset shadows for images
+@mixin inset-shadow {
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+}
+.inset-shadow,
+%inset-shadow {
+  @include inset-shadow;
 }
